--- a/project.html
+++ b/project.html
@@ -72,7 +72,9 @@ gtag('config', 'UA-141214791-1');
 <!-- PROBLEM SECTION ---------------------------------------------------------->
   <section class="Problem">
     <h1>Problem</h1>
-      <h3 class="top-line-problem">There was multiple items needed to be solved for this project.</h3>
+    <h2 class="problem-p">How would a new company approach a cloud storage service? Google Drive, Dropbox and Pinterest already exists and is doing great, so what grounds have gone yet uncovered that can be explored
+              more fully without trying to compete directly with them? What spaces exist for a second cloud storage app?</h2>
+      <h3 class="top-line-problem">These are some of the items that needed to be solved for this project.</h3>
         <ul>
           <li class="overview-bold">1.</li>
           <li class="ProblemLine-1">Create name or brand</li>
@@ -95,7 +97,7 @@ gtag('config', 'UA-141214791-1');
 <!-- SOLUTION SECTION --------------------------------------------------------->
 <section class="Solution">
    <h1>Solution</h1>
-     <p>A easy to use cloud storage service called Save Safe. This application is great for every type of user that allows you to save, edit and organize your data on the go. </p>
+     <p>The solution is Save Safe. You can edit and organize your data on the go, Save Safe lets you save documents, photos and websites all in one location. You also can edit all of your items in your cloud.</p>
      <a class="SaveSafe-Prototype1-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=1%3A2&viewport=569%2C303%2C0.021838771179318428&scaling=scale-down"target="_blank">Desktop Prototype</a>
      <a class="SaveSafe-Prototype2-Button" href="https://www.figma.com/proto/GkyEFTgMVzOmM9x5aUKXwzPY/Save-Safe-Mobile-iPhone-8?node-id=1%3A1589&viewport=504%2C372%2C0.02803315594792366&scaling=scale-downtarget="target="_blank">Mobile Prototype</a>
 </section>
@@ -127,6 +129,8 @@ gtag('config', 'UA-141214791-1');
      <a class="SaveSafe-Survey-Button" href="https://docs.google.com/forms/d/1cXu5NNsYf_OmmZJsqkaSUl8Kuld84HsCwEcf4b8Nj-c/prefill"target="_blank">User Surveys</a>
      <a class="SaveSafe-Responses-Button" href="https://docs.google.com/forms/d/1cXu5NNsYf_OmmZJsqkaSUl8Kuld84HsCwEcf4b8Nj-c/edit#responses"target="_blank">Responses</a>
 </section>
+<!-- SWOT IMAGE ---------------------------------------------------->
+<img class="SWOT-Image" src="images/swot-image.jpg" alt="SWOT Image"/>
 <!-- SWOT ANALYSIS SECTION ---------------------------------------------------->
 <section class="SWOT-Analysis-Section">
   <h1>SWOT Analysis</h1>
@@ -204,6 +208,8 @@ gtag('config', 'UA-141214791-1');
   <ul class="BIO-p">Joe is recently retired and loves spending his new free time outdoors. With living in Michigan there is a lot of fun things to do outside. He loves hiking and camping with his wife. Joe has two kids that are older and live far away, but loves to stay in touch with his kids. He loves sending  photos of the new events he is partaking in. While he is a outdoors man Joe also loves to write and currently writing a book on the unique water falls in the area.
  </ul>
 </section>
+<!-- USER STORIES IMAGE ----------------------------------------------------->
+<img class="user-stories-image" src="images/user-stories-image.jpg" alt="User Stories Image"/>
 <!-- USER STORIES SECTION ----------------------------------------------------->
 <section class="User-Stories-Section">
   <h1>User Stories</h1>
