--- a/project.html
+++ b/project.html
@@ -130,7 +130,9 @@ gtag('config', 'UA-141214791-1');
      <a class="SaveSafe-Responses-Button" href="https://docs.google.com/forms/d/1cXu5NNsYf_OmmZJsqkaSUl8Kuld84HsCwEcf4b8Nj-c/edit#responses"target="_blank">Responses</a>
 </section>
 <!-- SWOT IMAGE ---------------------------------------------------->
-<img class="SWOT-Image" src="images/swot-image.jpg" alt="SWOT Image"/>
+<section>
+ <img class="SWOT-Image" src="images/swot-image.jpg" alt="SWOT Image"/>
+</section>
 <!-- SWOT ANALYSIS SECTION ---------------------------------------------------->
 <section class="SWOT-Analysis-Section">
   <h1>SWOT Analysis</h1>
@@ -138,6 +140,10 @@ gtag('config', 'UA-141214791-1');
      <a class="SaveSafe-SWOT-Dropbox-Button" href="https://docs.google.com/document/d/16NMVTrKmr75oCOgXNasCgtyrAYqmy2ZBFeJnooty06o/edit?usp=sharing"target="_blank">Dropbox</a>
      <a class="SaveSafe-SWOT-GoogleDrive-Button" href="https://docs.google.com/document/d/1usfCJv3pBw3rQHO9zz6A5M9n9Zm_rVpr5MnRBJcUT0U/edit?usp=sharing"target="_blank">Google Drive</a>
      <a class="SaveSafe-SWOT-Pinterest-Button" href="https://docs.google.com/document/d/1P5i736uPDPtShuqC2x2dIsk1nmKoiYH1bgGSsCjn5Js/edit?usp=sharing"target="_blank">Pinterest</a>
+</section>
+<!-- PERSONA Mobile Image SECTION ---------------------------------------------------------->
+<section class="persona-image">
+  <img class="Persona-Image-mobile" src="images/persona-mobile.jpeg" alt="Persona Section mobile Photo"/>
 </section>
 <!-- PERSONA SECTION ---------------------------------------------------------->
 <section class="Personas-Section">
@@ -209,7 +215,9 @@ gtag('config', 'UA-141214791-1');
  </ul>
 </section>
 <!-- USER STORIES IMAGE ----------------------------------------------------->
+<section>
 <img class="user-stories-image" src="images/user-stories-image.jpg" alt="User Stories Image"/>
+</section>
 <!-- USER STORIES SECTION ----------------------------------------------------->
 <section class="User-Stories-Section">
   <h1>User Stories</h1>
